# dispatcher-plugin-nb2workflow

./: .gitignore  setup.cfg  test-requirements.txt
.github/workflows/: python-app.yml
dispatcher_plugin_nb2workflow/: __init__.py  dataserver_dispatcher.py  exposer.py  products.py  queries.py  util.py
dispatcher_plugin_nb2workflow/config_dir/: data_server_conf.yml  data_server_conf.yml.example
tests/: conftest.py  example-kg.ttl  test_plugin.py
tests/example_nb/: echo.ipynb  echo_unannotated.ipynb  failing.ipynb  file_download.ipynb  image.ipynb  optional_par.ipynb  parameter-output.ipynb  paramout.ipynb  product_label.ipynb  structured.ipynb
tests/responses/: ascii_binary.json  data_product.json  image.json  lightcurve.json  lightcurve_async.json  options.json  table.json  test_output.html  test_output_no_glue_output.html
