[metadata]
name = dispatcher-plugin-nb2workflow
version = 0.0.1

[options]
packages = dispatcher_plugin_nb2workflow
install_requires =
    rdflib
    python-magic
    cdci_data_analysis

[options.extras_require] 
test = 
    pytest
    psutil
    pytest-httpserver==1.0.8
    pytest-xprocess
    nb2workflow